2017-Jun-02 ddamiani    Tag V08-07-04.  Added ConfigV1 and FrameV1 for the Andor Zyla CMOS camera.
2017-Mar-14 ddamiani    Tag V08-07-03.  Updated QuadAdc ConfigV1 so it is tagged as a config type - fix for psana.
2017-Mar-14 ddamiani    Tag V08-07-02.  Added ConfigV2 for the PSI Jungfrau detector and ConfigV1 for the QuadAdc.
2017-Jan-10 ddamiani    Tag V08-07-01.  Added DetLab to DetInfo Detector enum.
2016-Dec-16 ddamiani    Tag V08-07-00.  Added ConfigV1 and ElementV1 for the PSI Jungfrau detector.
2016-Dec-07 ddamiani    Tag V08-06-19.  Added BLD for the HX2 beam monitor and devel ConfigV1 for the Archon controller.
2016-Oct-31 ddamiani    Tag V08-06-18.  Added analog input bld for SXR. Added new ControlsCameraConfigV1 ddl type for IOC cameras.
2016-Oct-17 ddamiani    Tag V08-06-17.  Fix bug in BldDataBeamMonitorV1 so it reflects the actual recorded data
2016-Sep-30 ddamiani    Tag V08-06-16.  Update BldDataBeamMonitor type to be BldDataBeamMonitorV1.
2016-Sep-27 ddamiani    Tag V08-06-15.  Added BldDataUsdUsbV1 for shared UsdUsb encoder boxes and minor fixes for BldDataBeamMonitor type.
2016-Jun-14 ddamiani    Tag V08-06-13.  Adds entries in BldInfo for the new spectrometer bld for the profile monitor cameras in MFX.
2016-Jun-10 ddamiani    Tag V08-06-12.  Fix Partition::ConfigV2 so that helper methods can be used on bits higher than 255.
2016-Jun-09 ddamiani    Tag V08-06-11.  Added Partition::ConfigV2 to support bld masks with an arbitrary number of bits.
2016-Jun-02 ddamiani    Tag V08-06-10.  Fix for BldDataEOrbitsV0 which removes the value_type tag from the ddl.
2016-May-23 ddamiani    Tag V08-06-09.  Added BldDataEOrbitsV0 electron beam orbit parameters.
2016-Apr-15 ddamiani    Tag V08-06-08.  Added a ConfigV2 for the Andor cameras with support of crop mode.
2016-Mar-31 ddamiani    Tag V08-06-06.  Added a LeCroy type to DetInfo.
2016-Mar-29 ddamiani    Tag V08-06-05.  Added a constructor to Generic1D::DataV0.