@@ -102,7 +102,12 @@ const char* BldInfo::name(const BldInfo& src){
     "MfxDg1_Pim",
     "MfxDg2_Pim",
     "SXR-AIN-01",
-    "HX2-BEAMMON-01"
+    "HX2-BEAMMON-01",
+    "XRT-USB-ENCODER-01",
+    "XPP-USB-ENCODER-01",
+    "XPP-USB-ENCODER-02",
+    "XCS-USB-ENCODER-01",
+    "CXI-USB-ENCODER-01"
   };
   return (src.type() < NumberOf ? _typeNames[src.type()] : "-Invalid-");
 }
