@@ -1,3 +1,4 @@
+2017-Jun-21 ddamiani    Tag V08-07-05.  Added entries in BldInfo for controls usdusb4 encoder boxes.
 2017-Jun-02 ddamiani    Tag V08-07-04.  Added ConfigV1 and FrameV1 for the Andor Zyla CMOS camera.
 2017-Mar-14 ddamiani    Tag V08-07-03.  Updated QuadAdc ConfigV1 so it is tagged as a config type - fix for psana.
 2017-Mar-14 ddamiani    Tag V08-07-02.  Added ConfigV2 for the PSI Jungfrau detector and ConfigV1 for the QuadAdc.
